update: dependecies
