# src/controllers/auth/groups.controller.ts
@@ -1,0 +1,12 @@
+import {
+   Controller
+} from "@cmmv/http";
+
+import {
+    GroupsControllerGenerated
+} from "@generated/controllers/auth/groups.controller"; 
+
+@Controller('groups')
+export class GroupsController extends GroupsControllerGenerated {
+    //Function GroupsController not implemented
+}
